--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,54 @@ body,
 :root {
     height: 100%;
 }
+
+.swiper-button-prev, .swiper-button-next {
+    background: #fff;
+    color: #000;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    top: 22%;
+    transition: all 0.25s ease 0s;
+}
+
+.swiper-button-prev::after, .swiper-button-next::after {
+    font-size: 1rem;
+    font-weight: bolder;
+    padding-top: 1px;
+}
+
+.swiper-button-prev {
+    -webkit-filter: drop-shadow(24px 0px 12px rgba(255,255,255, 1));
+    left: 0;
+}
+
+.swiper-button-next {
+    -webkit-filter: drop-shadow(-24px 0px 12px rgba(255,255,255, 1));
+    right: 0;
+}
+
+.swiper-button-next::after {
+    padding-left: 3px;
+}
+
+.swiper-button-prev::after {
+    padding-right: 1px;
+}
+
+.swiper-button-disabled {
+    opacity: 0 !important;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+  }
+  
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px transparent; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #e5e5e5; 
+    border-radius: 10px;
+}
